<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_resident"
        android:enabled="true"
        android:icon="@drawable/ic_people_dark"
        android:title="@string/navigation_buttom_resident"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_vehicle"
        android:enabled="true"
        android:icon="@drawable/ic_directions_car_dark"
        android:title="@string/navigation_buttom_vehicle"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_visitor"
        android:enabled="true"
        android:icon="@drawable/ic_face_dark"
        android:title="@string/navigation_buttom_visitor"
        app:showAsAction="ifRoom" />

</menu>